// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<External /> renders clean correctly 1`] = `
.hllEJG {
  color: currentColor;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
  className="sc-bwzfXH hllEJG"
  href="/url"
>
  Text
</a>
`;

exports[`<External /> renders correctly 1`] = `
.hRLKqa {
  color: currentColor;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<a
  className="sc-bwzfXH hRLKqa"
  href="/url"
>
  Text
</a>
`;
